<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/topenternumber"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragmentbg"
        android:orientation="vertical"
        android:paddingStart="12dp"
        android:paddingTop="16dp"
        android:paddingEnd="12dp"
        tools:context=".fragments.enterphonenumber.EnternumberFragment">

        <LinearLayout
            android:id="@+id/step1layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/step_1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/please_enter_your_10_digit_phone_number_here_n_you_will_recieve_an_access_code"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/you_will_recieve_an_access_code"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/numbertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/edittextbg"
            android:hint="@string/enter_10_digit_number"
            android:inputType="phone"
            android:padding="12dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/getaccessnumber"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/numbertext"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/orange"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>
</layout>
