<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="enteraccescodeviewmodel"
            type="com.saitejajanjirala.startoonlabstask.fragments.enteraccesscode.EnteraccesscodeViewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.enteraccesscode.EnteracesscodeFragment"
    android:paddingTop="16dp"
    android:paddingEnd="12dp"
    android:paddingStart="12dp"
    android:id="@+id/topenteraccesscode"
    android:background="@drawable/fragmentbg">
    <LinearLayout
        android:id="@+id/step2layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/step_2"
            android:layout_margin="12dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:text="@string/please_enter_6_digit_access_code_to_verify"/>
    </LinearLayout>
    <EditText
        android:id="@+id/accesscodetext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:inputType="phone"
        android:layout_centerInParent="true"
        android:hint="@string/acess_code"
        android:background="@drawable/edittextbg"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/checkvalidaccesscode"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/orange"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_arrow"
        android:layout_below="@+id/accesscodetext"/>
    <Button
        android:id="@+id/donthaveaccesscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        android:theme="@style/Bordlerlessbutton"
        android:layout_below="@+id/checkvalidaccesscode"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/i_don_t_have_access_code"/>
</RelativeLayout>
</layout>